1.33
* Features
	* Added a new property `ICommand#getArgumentTrimType` and `Command#argumentTrimType` which can be either `NONE`, `LENIENT` and `STRICT`, this will determine how spaces are handled in commands
	* Added `setAllowedQuoteCharacters(List<Pair>)`, `addAllowedQuoteCharacter(char, char)` and `getAllowedQuoteCharacters` to `CommandParseImpl`. This, by default, has quote characters gotten from discord.py
	* Added`IComponentFactory` which has the methods `createArguments` and `createOptions` which are used in the creation of generated commands
	* Added the ability for command methods to be called `on_command` instead of just `onCommand`
	* Added `CommandStore#loadFrom(ClassLoader, String, boolean)`, this can be useful if you are dynamically loading commands

* Changes
	* Reworked the command structure, `IComamnd` is now implemented by `AbstractCommand` which is extended by `MethodCommandImpl` (implementing `IMethodCommand`) which is extended by CommandImpl. This rework is to easier allow for custom commands, more information can be see in the README under Command Extensions